# mitsubishi-arm-pick-and-place-simulation

./: README.md
melfa_ros2_driver/doc/: melfa_ros2_driver.md
melfa_ros2_driver/melfa_bringup/config/: ros_gz_bridge.yaml
melfa_ros2_driver/melfa_bringup/launch/: rh6crh6020_control.launch.py  rh6frh5520_control.launch.py  rv13frl_control.launch.py  rv2fr_control.launch.py  rv4fr_control.launch.py  rv4frl_control.launch.py  rv5as_control.launch.py  rv7frl_control.launch.py  rv80fr_control.launch.py  rv8crl_control.launch.py
melfa_ros2_driver/melfa_description/config/: rv2fr_controllers.yaml
melfa_ros2_driver/melfa_description/ros2_control/: rh6crh6020.hardware.xacro  rv2fr.hardware.xacro
melfa_ros2_driver/melfa_description/urdf/rv2fr/: camera.xacro  pick_place.sdf  rv2fr.urdf  rv2fr.urdf.xacro  rv2fr_macro.xacro
melfa_ros2_driver/melfa_driver/src/: hardware_interface.cpp
melfa_ros2_driver/melfa_moveit_config/melfa_rh6crh6020_moveit_config/: package.xml
melfa_ros2_driver/melfa_moveit_config/melfa_rv2fr_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
melfa_ros2_driver/melfa_moveit_config/melfa_rv2fr_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  rv2fr.ros2_control.xacro  rv2fr.srdf  rv2fr_macro.srdf.xacro  rv2fr_servo.yaml
melfa_ros2_driver/melfa_moveit_config/melfa_rv2fr_moveit_config/launch/: move_group.launch.py  (+1 more)
pick_and_place/: package.xml  setup.py
pick_and_place/pick_and_place/: colour_detector.py  commander_subscriber.py  goto_pose.py  pick_place.py
